// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Animate should render correctly 1`] = `
<div
  className="test"
  style={
    Object {
      "transition": "1s all linear",
    }
  }
>
  test
</div>
`;

exports[`Animate should render custome tag correctly 1`] = `
<l
  className="test"
  style={
    Object {
      "transition": "1s all linear",
    }
  }
/>
`;
